--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -38,10 +38,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^2.2.0
   provider: ^6.0.5
+  firebase_core: ^2.5.0
+  firebase_auth_oauth: ^1.2.2
   firebase_auth: ^4.2.6
   google_sign_in: ^5.4.4
   blurrycontainer: ^1.0.2
   flutter_rating_bar: ^4.0.1
+  anim_search_bar: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -67,8 +70,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-
     - assets/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
