--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   mongo_dart: ^0.8.2
   anim_search_bar: ^2.0.3
-
+  expandable: ^5.0.1
+  badges: ^3.0.2
   razorpay_flutter: ^1.3.4
 
 
@@ -76,6 +77,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
