--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   expandable: ^5.0.1
   badges: ^3.0.2
   razorpay_flutter: ^1.3.4
+  countup: ^0.1.4
+  syncfusion_flutter_charts: ^20.4.50
 
 
 dev_dependencies:
