--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   image_picker: ^0.8.6+1
   file_picker: ^5.2.5
   path_provider: ^2.0.12
+  shared_preferences: ^2.0.17
 
 
 dev_dependencies:
