--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   file_picker: ^5.2.5
   path_provider: ^2.0.12
   shared_preferences: ^2.0.17
+  qr_code_scanner: ^1.0.1
 
 
 dev_dependencies:
