added a screen(stationary shopkeeper home screen)

--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   path_provider: ^2.0.12
   shared_preferences: ^2.0.17
   qr_code_scanner: ^1.0.1
+  swipe_to: ^1.0.2
 
 
 dev_dependencies:
