--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   swipe_to: ^1.0.2
   carousel_slider: ^4.2.1
+  otp_text_field: ^1.1.3
 
 
 dev_dependencies:
