--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   swipe_to: ^1.0.2
   carousel_slider: ^4.2.1
   otp_text_field: ^1.1.3
+  url_launcher: ^6.1.9
 
 
 dev_dependencies:
