--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   anim_search_bar: ^2.0.3
   expandable: ^5.0.1
   badges: ^3.0.2
-  razorpay_flutter: ^1.3.4
+  razorpay_flutter: ^1.3.3
   countup: ^0.1.4
   syncfusion_flutter_charts: ^20.4.50
   image_picker: ^0.8.6+1
@@ -60,6 +60,7 @@ dependencies:
   carousel_slider: ^4.2.1
   otp_text_field: ^1.1.3
   url_launcher: ^6.1.9
+  
 
 
 dev_dependencies:
@@ -72,10 +73,21 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.11.0"
+#   flutter_launcher_icons: “^0.8.0”
+
+# flutter_icons:
+#   android: "launcher_icon"
+#   ios: true
+#   image_path: "assets/Hotshot-logos.jpeg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/Hotshot-logos.jpeg"
+  min_sdk_android: 21
 # The following section is specific to Flutter packages.
 flutter:
 
