--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -31,7 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^4.0.3
+  google_fonts:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,7 +48,7 @@ dependencies:
   anim_search_bar: ^2.0.3
   expandable: ^5.0.1
   badges: ^3.0.2
-  razorpay_flutter: ^1.3.4
+  razorpay_flutter: ^1.3.3
   countup: ^0.1.4
   syncfusion_flutter_charts: ^20.4.50
   image_picker: ^0.8.6+1
@@ -60,17 +60,12 @@ dependencies:
   carousel_slider: ^4.2.1
   otp_text_field: ^1.1.3
   url_launcher: ^6.1.9
+  
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.8.0"
-
-flutter_icons:
-  android: true
-  ios: true
-  image_path: "assets/Hotshot-logos.jpeg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -78,10 +73,21 @@ flutter_icons:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: "^0.11.0"
+#   flutter_launcher_icons: “^0.8.0”
+
+# flutter_icons:
+#   android: "launcher_icon"
+#   ios: true
+#   image_path: "assets/Hotshot-logos.jpeg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/Hotshot-logos.jpeg"
+  min_sdk_android: 21
 # The following section is specific to Flutter packages.
 flutter:
 
